--- a/app/styles/ihtsdo.scss
+++ b/app/styles/ihtsdo.scss
@@ -7403,7 +7403,7 @@ tbody.collapse.in {
     > a {
       position: relative;
       display: block;
-      padding: 10px 15px;
+      padding: 12px 10px;
       &:focus, &:hover {
         text-decoration: none;
         background-color: #eee;
